# ha-bayesian-gen

./: .gitignore  CLAUDE.md  flake.nix  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
src/: App.vue  integration.test.ts  style.css
src/components/: BayesianSimulator.vue  ConfigOutput.vue  ConnectionForm.vue  EntityAnalyzer.vue  EntityCard.vue  EntityScoreDisplay.vue  TimePeriodSelector.vue
src/components/EntityCard/: CategoricalEntityCard.vue  NumericEntityCard.vue  PlaceholderContent.vue  ProgressIndicator.vue
src/components/TimePeriodSelector/: BulkPeriodMode.vue  CalendarDay.vue  CalendarTimelineView.vue  ConfigurationManager.vue  PeriodsList.vue  SinglePeriodMode.vue  TimeRangeOverlay.vue  (+1 more)
src/composables/: useBayesianAnalysis.ts
src/services/: analysisOrchestrator.ts  bayesianCalculator.ts  bufferBayesianSimulator.ts  cachedBayesianSimulator.ts  entityBuffer.ts  entityFetcher.ts  entityScorer.ts  homeAssistant.ts  simulationService.ts  workerPool.edge.test.ts  workerPool.test.ts  workerPool.ts
src/styles/: components.css
src/types/: bayesian.ts  homeAssistant.ts
src/utils/: chartConfig.ts  formatters.ts  rangeUtils.ts  sensorTimeAnalysis.edge.test.ts  sensorTimeAnalysis.test.ts  sensorTimeAnalysis.ts
src/wasm/: bayesianCalculatorWasm.ts
src/wasm/bayesian_calculator/: Cargo.toml
src/wasm/bayesian_calculator/src/: lib.rs  sensor_analysis.rs  threshold.rs  timeline.rs  types.rs
src/workers/: analysisWorker.edge.test.ts  analysisWorker.test.ts  analysisWorker.ts  simulationWorker.ts
